settato il primo menu laterale alto, pilota

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>SEGRETO</title>
 </head>
 
@@ -23,6 +24,25 @@
   <main>
     <div class="allMainContent">
       <aside>
+        <div class="wrapMenuPilota">
+          <div class="wrapMenuPilotaTitle">
+            <div>
+              <img class="ico"src="assets/helmet.png" alt="">
+            </div>
+            <div>
+              <h3 class="titoliMenu">Pilota</h3>
+            </div>
+          </div>
+          <div class="wrapMenuNav">
+            <nav class="menu">
+              <ul>
+                <li class="elemento"><a href="">Archivio piloti</a></li>
+                <li class="elemento"><a href="">Nuovo pilota</a></li>
+              </ul>
+            </nav>
+          </div>
+
+        </div>
 
       </aside>
       <div class="mainContent">
