perfezionato il nome delle classi

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <main>
     <div class="allMainContent">
       <aside>
-        <div class="wrapMenuPilota">
-          <div class="wrapMenuPilotaTitle">
+        <div class="wrapMenu">
+          <div class="wrapMenuTitle">
             <div>
               <img class="ico"src="assets/helmet.png" alt="">
             </div>
