concluso aside statico

--- a/index.html
+++ b/index.html
@@ -43,6 +43,105 @@
           </div>
 
         </div>
+        <div class="wrapMenu">
+          <div class="wrapMenuTitle">
+            <div>
+              <img class="ico"src="assets/categorie.png" alt="">
+            </div>
+            <div>
+              <h3 class="titoliMenu">Categorie</h3>
+            </div>
+          </div>
+          <div class="wrapMenuNav">
+            <nav class="menu">
+              <ul>
+                <li class="elemento"><a href="">Archivio categoria</a></li>
+                <li class="elemento"><a href="">Nuovo categoria</a></li>
+              </ul>
+            </nav>
+          </div>
+
+        </div>
+        <div class="wrapMenu">
+          <div class="wrapMenuTitle">
+            <div>
+              <img class="ico"src="assets/flag.png" alt="">
+            </div>
+            <div>
+              <h3 class="titoliMenu">Gare</h3>
+            </div>
+          </div>
+          <div class="wrapMenuNav">
+            <nav class="menu">
+              <ul>
+                <li class="elemento"><a href="">Archivio gare</a></li>
+                <li class="elemento"><a href="">Nuova gara</a></li>
+              </ul>
+            </nav>
+          </div>
+
+        </div>
+        <div class="wrapMenu">
+          <div class="wrapMenuTitle">
+            <div>
+              <img class="ico"src="assets/punti.png" alt="">
+            </div>
+            <div>
+              <h3 class="titoliMenu">Sistema punteggio</h3>
+            </div>
+          </div>
+          <div class="wrapMenuNav">
+            <nav class="menu">
+              <ul>
+                <li class="elemento"><a href="">Guarda sistema</a></li>
+                <li class="elemento"><a href="">Nuovo sistema punteggio</a></li>
+              </ul>
+            </nav>
+          </div>
+
+        </div>
+        <div class="wrapMenu">
+          <div class="wrapMenuTitle">
+            <div>
+              <img class="ico"src="assets/flag.png" alt="">
+            </div>
+            <div>
+              <h3 class="titoliMenu">Impostazioni campionato</h3>
+            </div>
+          </div>
+          <div class="wrapMenuNav">
+            <nav class="menu">
+              <ul>
+                <li class="elemento"><a href="">Info campionato</a></li>
+                <li class="elemento"><a href="">Classifica piloti generale</a></li>
+                <li class="elemento"><a href="">Classifica piloti per categorie</a></li>
+                <li class="elemento"><a href="">Nuovo circuito</a></li>
+
+              </ul>
+            </nav>
+          </div>
+
+        </div>
+        <div class="wrapMenu">
+          <div class="wrapMenuTitle">
+            <div>
+              <img class="ico"src="assets/calcolatrice.png" alt="">
+            </div>
+            <div>
+              <h3 class="titoliMenu">Contabilità campionato</h3>
+            </div>
+          </div>
+          <div class="wrapMenuNav">
+            <nav class="menu">
+              <ul>
+                <li class="elemento"><a href="">Iscrizioni campionato</a></li>
+                <li class="elemento"><a href="">Pagamenti gare</a></li>
+                <li class="elemento"><a href="">Spese</a></li>
+              </ul>
+            </nav>
+          </div>
+
+        </div>
 
       </aside>
       <div class="mainContent">
